--- a/index.css
+++ b/index.css
@@ -1,141 +1,109 @@
 * {
-  font-family: "Times New Roman";
+     font-family: Helvetica;
 }
-  
-body{
-    justify-content: center;
-    align-items: center;
+ body{
+     justify-content: center;
+     align-items: center;
 }
-
-div {
-    background-color: white;
-    margin-right: auto;
-    margin-left: auto;
-    max-width: 800px;
+ div {
+     background-color: white;
+     margin-right: auto;
+     margin-left: auto;
+     max-width: 800px;
 }
-
-table {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    border-collapse: collapse;
-    border: .125vw solid black;
+ table {
+     width: 100%;
+     margin-left: auto;
+     margin-right: auto;
+     text-align: center;
+     border-collapse: collapse;
+     border: .125vw solid black;
 }
-
-th {
-    border: .125px solid black;
+ th {
+     border: .125px solid black;
 }
-
-th.sortable:hover {
-  cursor: pointer;
+ th.sortable:hover {
+     cursor: pointer;
 }
-
-tr.header_row {
-    font-size: calc(0.5em + 1vmin);
-    background-color: #D3D3D3;
-    border-bottom: .275vw double black;
+ tr.header_row {
+     font-size: calc(0.5em + 1vmin);
+     background-color: #D3D3D3;
+     border-bottom: .275vw double black;
 }
-
-tr.header_row:hover {
-  background-color: #D3D3D3;
+ tr.header_row:hover {
+     background-color: #D3D3D3;
 }
-
-tr:nth-child(2n) {
-    height: 5em;
+ tr:nth-child(2n) {
+     height: 5em;
 }
-
-tr:nth-child(2n + 3) {
-    height: 5em;
-    background-color: #ededed;
+ tr:nth-child(2n + 3) {
+     height: 5em;
+     background-color: #ededed;
 }
-
-td{
-    font-size: calc(0.5em + 1vmin);
-    align-items: center;
+ td {
+     font-size: calc(0.5em + 1vmin);
 }
-
-tr:hover {
-    background-color: #FFECCF;
+ tr:hover {
+     background-color: #FFECCF;
 }
-
-img {
-    width: calc(4em + 1vmin);
-    height: auto;
-    vertical-align: center;
+ img {
+     width: calc(4em + 1vmin);
 }
-
-table button.type_grass{
-  background-color:#7BCE52;
-  color: white;
-  font-weight: bold;
-  border: none;
-  border-radius: 1em;
-  padding-right: calc(.5em + 1vmin);
-  padding-left: calc(.5em + 1vmin);
-  padding-top: .5em;
-  padding-bottom: .5em;
-  margin-top: .25em;
+ table button.type_grass{
+     background-color:#7BCE52;
+     color: white;
+     box-shadow: 0px 1px 3px 0px black;
+     border-radius: 1em;
+     padding-right: calc(.5em + 1vmin);
+     padding-left: calc(.5em + 1vmin);
+     padding-top: calc((.5em + 1vmin)/100);
+     padding-bottom: calc((.5em + 1vmin)/100);
 }
-
-table button.type_poison{
-  background-color:#A15495;
-  color: white;
-  font-weight: bold;
-  border: none;
-  border-radius: 1em;
-  padding-right: calc(.5em + 1vmin);
-  padding-left: calc(.5em + 1vmin);
-  padding-top: .5em;
-  padding-bottom: .5em;
-  margin-top: .25em;
+ table button.type_poison{
+     background-color:#A15495;
+     color: white;
+     box-shadow: 0px 1px 3px 0px black;
+     border-radius: 1em;
+     padding-right: calc(.5em + 1vmin);
+     padding-left: calc(.5em + 1vmin);
+     padding-top: calc((.5em + 1vmin)/100);
+     padding-bottom: calc((.5em + 1vmin)/100);
 }
-
-table button.type_fire{
-  background-color: #F75231;
-  color: white;
-  font-weight: bold;
-  border: none;
-  border-radius: 1em;
-  padding-right: calc(.5em + 1vmin);
-  padding-left: calc(.5em + 1vmin);
-  padding-top: .5em;
-  padding-bottom: .5em;
-  margin-top: .25em;
-  margin-bottom: .25em;
+ table button.type_fire{
+     background-color: #F75231;
+     color: white;
+     box-shadow: 0px 1px 3px 0px black;
+     border-radius: 1em;
+     padding-right: calc(.5em + 1vmin);
+     padding-left: calc(.5em + 1vmin);
+     padding-top: calc((.5em + 1vmin)/100);
+     padding-bottom: calc((.5em + 1vmin)/100);
 }
-
-table button.type_flying{
-  background-color: #9CADF7;
-  color: white;
-  font-weight: bold;
-  border: none;
-  border-radius: 1em;
-  padding-right: calc(.5em + 1vmin);
-  padding-left: calc(.5em + 1vmin);
-  padding-top: .5em;
-  padding-bottom: .5em;
-  margin-top: .25em;
+ table button.type_flying{
+     background-color: #9CADF7;
+     color: white;
+     box-shadow: 0px 1px 3px 0px black;
+     border-radius: 1em;
+     padding-right: calc(.5em + 1vmin);
+     padding-left: calc(.5em + 1vmin);
+     padding-top: calc((.5em + 1vmin)/100);
+     padding-bottom: calc((.5em + 1vmin)/100);
 }
-
-table button {
-    min-width: 6em;
-    max-width: 6em;
-    border: none;
-    background: transparent;
-    font-size: calc(0.5em + 1vmin);
+ table button {
+     line-height: 0;
+     width: calc((1em + 1vmin)*4);
+     height: calc((.25em + 1vmin)*3);
+     border: none;
+     background: transparent;
+     font-size: calc(0.5em + 1vmin);
 }
-
-a {
-    text-decoration: none;
-    color: blue;
-    font-weight: bold;
+ table a {
+     text-decoration: none;
+     color: blue;
 }
-
-a:hover {
-    color: red;
+ a:hover {
+     color: red;
 }
-
-a:visited {
-    color: purple;
+ a:visited {
+     color: purple;
 }
